# beenative

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  compose.yaml  dockerfile.www  makefile  publish.py  pyproject.toml  testpad.ipynb  verify.py
.github/: release-drafter.yml
.github/workflows/: alembic.yaml  black.yaml  build.yaml  dapperdata.yaml  docker.yaml  mypy.yaml  paracelsus.yaml  pypi.yaml  release-drafter.yml  ruff.yaml  tomlsort.yaml
beenative/: api.py  cli.py  main.py  ncbg_crawler.py  pdf_gen.py  plant_toolbox_crawler.py  prairie_moon_crawler.py  settings.py  vascular_nc_crawler.py
beenative/assets/: alembic.ini
beenative/assets/data/: plant_list.html  seed_plants.db
beenative/assets/static/: README.md
beenative/conf/: db.py  settings.py
beenative/db/: engine.py  env.py  repository.py
beenative/db/versions/: 01a9e1791f8c_update_lifecycle_to_jsonlist.py  0d489ae859a2_update_lifecycle_to_jsonlist.py  1789d7838be8_initial_fresh_start.py  46df992b602f_removing_duplicative_columns.py  b3f49df8912f_moving_to_latest_changes.py
beenative/models/: __init__.py  base.py  plant.py
beenative/utils/: flet.py  flet_utils.py  ingest.py  ingest_utils.py  utils.py
beenative/views/: documentation.py  plant_details.py  raw_details.py  search.py
docker/www/: prestart.sh
docs/dev/: README.md  api.md  cli.md  database.md  dependencies.md  docker.md  documentation.md  github.md  makefile.md  pypi.md  settings.md  testing.md
tests/: conftest.py  test_cli.py  test_settings.py  test_www.py  verify_map.py
tests/services/: test_jinja.py
