[build-system]
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }

[tool.setuptools.package-data]
beenative = ["py.typed"]

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"
write_to = "beenative/_version.py"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[project]
name = "beenative"
description = "An application to provide information about native plants."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Steven Elliott" }]
dependencies = [
  "SQLAlchemy",
  "aiosqlite",
  "alembic",
  "beautifulsoup4>=4.14.3",
  "flet>=0.80.5",
  "greenlet>=3.3.1",
  "pillow>=12.1.0",
  "pydantic~=2.0",
  "pydantic-settings",
  "reportlab>=4.4.9",
  "requests>=2.32.5",
  "segno>=1.6.6",
  "svglib>=1.6.0",
  "urllib3>=2.6.2",
]
dynamic = ["version"]

[dependency-groups]
dev = [
  "build",
  "dapperdata",
  "fastapi",
  "fawltydeps>=0.20.0",
  "httpx",
  "mypy",
  "paracelsus",
  "pdf2image>=1.17.0",
  "polars>=1.36.1",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-pretty",
  "rich>=14.2.0",
  "ruff",
  "tombi",
  "typer",
  "uv",
  "vulture>=2.14",
]

[project.scripts]
beenative = "beenative.cli:app"

[project.optional-dependencies]
beenative = [
  "beenative",
]

[tool.ruff]
exclude = [".venv", "./beenative/_version.py", "./beenative/db/env.py", "testpad.ipynb"]
line-length = 120

[tool.coverage.run]
concurrency = ["thread", "greenlet"]
omit = [
  "./beenative/_version.py",
  "./beenative/__init__.py",
  "./tests/*",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
strict_optional = true
warn_return_any = true
warn_unused_ignores = true

[tool.uv]
exclude-newer = "1 week"

[tool.uv.sources]
beenative = { workspace = true }

[tool.flet]
org = "com.beenative.app"
product = "BeeNative"
company = "BeeNative"
copyright = "Copyright © 2026 BeeNative Team"
description = "Native Plant Finder for North Carolina"
build_number = 1

[tool.flet.app]
path = "beenative"
module = "main"
# Keep your window clean until setup is done
hide_window_on_start = true 

[tool.flet.app.boot_screen]
show = true
message = "Preparing environment..."

[tool.flet.compile]
app = true
packages = true

[tool.flet.cleanup]
app = true
packages = true