[build-system]
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }

[tool.setuptools.package-data]
beenative = ["py.typed"]

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"
write_to = "beenative/_version.py"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[project]
name = "beenative"
description = "An application to provide information about native plants."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Steven Elliott" }]
dependencies = [
  "SQLAlchemy",
  "aiosqlite",
  "alembic",
  "beautifulsoup4>=4.14.3",
  "flet>=0.80.5",
  "greenlet>=3.1.1",
  "pillow>=11.1.0",
  "pydantic~=2.0",
  "pydantic-settings",
  "reportlab>=4.4.9",
  "requests>=2.32.5",
  "segno>=1.6.6",
  "svglib>=1.5.0",
  "types-reportlab>=4.4.10.20260223",
  "types-requests>=2.32.4.20260107",
  "urllib3>=2.6.2",
]
dynamic = ["version"]

[dependency-groups]
dev = [
  "build",
  "dapperdata",
  "fastapi",
  "fawltydeps>=0.20.0",
  "httpx",
  "mypy",
  "paracelsus",
  "pdf2image>=1.17.0",
  "polars>=1.36.1",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-pretty",
  "rich>=14.2.0",
  "ruff",
  "tombi",
  "typer",
  "uv",
  "vulture>=2.14",
]

[project.scripts]
beenative = "beenative.cli:app"

[project.optional-dependencies]
beenative = [
  "beenative",
]

[tool.ruff]
exclude = [
  ".venv",
  "./beenative/_version.py",
  "./beenative/db/env.py",
  "testpad.ipynb"
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "W",  # pycodestyle
  "B",  # flake8-bugbear
  "I",  # isort
  # "N",        # pep8-naming
  # "D",        # pydocstyle
  # "S",        # flake8-bandit
  # "BLE",      # flake8-blind-except
  "A",  # flake8-builtins
  "LOG",  # flake8-logging
  "G",  # flake8-logging-format
  "RSE",  # flake8-raise
  "Q",  # flake8-quotes
  # "ARG",      # flake8-unused-arguments
  "C4",  # flake8-comprehensions
  "PLC",  # Pylint Convention
  "PLE",  # Pylint Error
  # "PLR",      # Pylint Refactor
  # "PLW",      # Pylint Warning
  "PERF",  # Perflint
  # "DOC",      # pydoclint
  # "RUF",      # Ruff-specific rules
  "PTH",  # flake8-use-pathlib
  "DTZ",  # flake8-datetimez
]
# We may want to adhere to D205 and D415 in the future.
ignore = [
  "D100",  # Missing docstring in public module
  "D105",  # Missing docstring in magic method
  "D104",  # Missing docstring in public package
  "D200",  # One-line docstring should fit on one line with quotes
  "D202",  # No blank lines allowed after function docstring
  "D205",  # 1 blank line required between summary line and description
  "D212",  # Multi-line docstring summary should start at the first line
  "D415",  # First line should end with a period, question mark, or exclamation point
  "PLR0904",  # too-many-public-methods
  "PLR0911",  # too-many-return-statements
  "PLR0912",  # too-many-branches
  "PLR0913",  # too-many-arguments
  "PLR0914",  # too-many-locals
  "PLR0915",  # too-many-statements
  "PLR1702",  # too-many-nested-blocks
  "PLR0917",  # too-many-positional-arguments
  "N806",  # Variable in function should be lowercase
  # "PLR2004",  # magic-value-comparison
  # "PLR6301",  # no-self-use
]
preview = false
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false
# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pycodestyle]
max-doc-length = 120
max-line-length = 120

[tool.ruff.lint.isort]
length-sort = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]
omit = [
  "./beenative/_version.py",
  "./beenative/__init__.py",
  "./tests/*",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
no_implicit_optional = true

plugins = ["pydantic.mypy"]
strict_optional = true
warn_return_any = true
warn_unused_ignores = true

ignore_missing_imports = true

exclude = [
  '.*/db/.*\.py',
  '.*/models/.*\.py',
  '.*/utils/.*\.py',
  "main.py",
  "cli.py",
  ".*_crawler.py",
  "api.py"
]

[tool.uv]
exclude-newer = "1 week"

[tool.uv.sources]
beenative = { workspace = true }

[tool.flet]
org = "com.beenative.app"
product = "BeeNative"
company = "BeeNative"
copyright = "Copyright © 2026 BeeNative Team"
description = "Native Plant Finder for North Carolina"
build_number = 1

[tool.flet.app]
path = "beenative"
module = "main"
# Keep your window clean until setup is done
# hide_window_on_start = false

[tool.flet.app.boot_screen]
show = true
message = "Preparing environment..."

[tool.flet.app.startup_screen]
show = true
message = "Starting up the app…"

[tool.flet.macos]
source_packages = ["pillow"]

[tool.flet.compile]
app = true
packages = true

[tool.flet.cleanup]
app = true
packages = true
package_files = ["**/*.pyi"]

[tool.flet.splash]
color = "#F4F7F5"
dark_color = "#121A13"
